update after lesson

--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "af63ba78",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "69578b61",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "55735f50",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "352132d2",
    "metadata": {},
    "outputs": [],
@@ -149,9 +149,18 @@
     "    \n",
     "    # Start your solutions\n",
     "\n",
-    "\n",
+    "    #for m in movies.find({\"plot\": {\"$regex\": \"^war\"}}).sort('released', pymongo.ASCENDING).limit(5):\n",
+    "    #    results.append({m['title'], m['released'], m['plot']}) \n",
     "    \n",
-    "\n",
+    "    for m in movies.find(\n",
+    "        {\"plot\": {\"$regex\": \"^war\", \"$options\": \"i\"}},\n",
+    "        #{\"title\": 1, \"plot\": 1, \"released\": 1}\n",
+    "    ).sort('released', pymongo.ASCENDING).limit(5):\n",
+    "        results.append({\n",
+    "            \"title\": m['title'],\n",
+    "            \"plot\": m['plot'],\n",
+    "            \"released\": m.get(\"released\")\n",
+    "        })\n",
     "\n",
     "\n",
     "    # Your solution ends here\n",
@@ -161,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "id": "b9f3c00d",
    "metadata": {},
    "outputs": [
@@ -185,7 +194,7 @@
        "  'released': datetime.datetime(2007, 12, 25, 0, 0)}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "id": "b707d3f4",
    "metadata": {},
    "outputs": [
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "c8ddd085",
    "metadata": {},
    "outputs": [],
@@ -273,8 +282,21 @@
     "    \n",
     "    # Start your solution\n",
     "\n",
-    "\n",
-    "\n",
+    "    stage_group = {\n",
+    "        \"$group\": {\n",
+    "            \"_id\": \"$rated\",\n",
+    "            \"count\": {\"$sum\": 1}\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    stage_sort = {\n",
+    "        \"$sort\": {\"_id\": pymongo.ASCENDING}\n",
+    "    }\n",
+    "    \n",
+    "    pipeline = [stage_group, stage_sort]\n",
+    "    \n",
+    "    for doc in movies.aggregate(pipeline):\n",
+    "        results.append(doc)\n",
     "\n",
     "    # End your solution\n",
     "    \n",
@@ -283,34 +305,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "31fc3ce2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'_id': None, 'movie_count': 9894},\n",
-       " {'_id': 'PG', 'movie_count': 1852},\n",
-       " {'_id': 'APPROVED', 'movie_count': 709},\n",
-       " {'_id': 'TV-G', 'movie_count': 59},\n",
-       " {'_id': 'AO', 'movie_count': 3},\n",
-       " {'_id': 'OPEN', 'movie_count': 1},\n",
-       " {'_id': 'TV-14', 'movie_count': 89},\n",
-       " {'_id': 'M', 'movie_count': 37},\n",
-       " {'_id': 'Approved', 'movie_count': 5},\n",
-       " {'_id': 'GP', 'movie_count': 44},\n",
-       " {'_id': 'PASSED', 'movie_count': 181},\n",
-       " {'_id': 'R', 'movie_count': 5537},\n",
-       " {'_id': 'Not Rated', 'movie_count': 1},\n",
-       " {'_id': 'G', 'movie_count': 477},\n",
-       " {'_id': 'TV-MA', 'movie_count': 60},\n",
-       " {'_id': 'TV-PG', 'movie_count': 76},\n",
-       " {'_id': 'TV-Y7', 'movie_count': 3},\n",
-       " {'_id': 'PG-13', 'movie_count': 2321}]"
+       "[{'_id': None, 'count': 9894},\n",
+       " {'_id': 'AO', 'count': 3},\n",
+       " {'_id': 'APPROVED', 'count': 709},\n",
+       " {'_id': 'Approved', 'count': 5},\n",
+       " {'_id': 'G', 'count': 477},\n",
+       " {'_id': 'GP', 'count': 44},\n",
+       " {'_id': 'M', 'count': 37},\n",
+       " {'_id': 'Not Rated', 'count': 1},\n",
+       " {'_id': 'OPEN', 'count': 1},\n",
+       " {'_id': 'PASSED', 'count': 181},\n",
+       " {'_id': 'PG', 'count': 1852},\n",
+       " {'_id': 'PG-13', 'count': 2321},\n",
+       " {'_id': 'R', 'count': 5537},\n",
+       " {'_id': 'TV-14', 'count': 89},\n",
+       " {'_id': 'TV-G', 'count': 59},\n",
+       " {'_id': 'TV-MA', 'count': 60},\n",
+       " {'_id': 'TV-PG', 'count': 76},\n",
+       " {'_id': 'TV-Y7', 'count': 3}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "740592c8",
    "metadata": {},
    "outputs": [],
@@ -399,6 +421,7 @@
     "    \n",
     "    # Start your solution\n",
     "\n",
+    "    count = movies_collection.count_documents({'num_mflix_comments': {'$gte': 3}})\n",
     "\n",
     "    # End your solution\n",
     "    \n",
@@ -407,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 114,
    "id": "45640146",
    "metadata": {},
    "outputs": [
@@ -417,7 +440,7 @@
        "385"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 115,
    "id": "a4327f99",
    "metadata": {},
    "outputs": [
